# cripto_currencies

./: .env.example  .gitignore  API request.py  API_request.py  Dockerfile  README.md  airflow.cfg  airflow.db  docker-compose.yaml  git_actions_test.py  main.py  onetimeextraction.ipynb  outputs.ipynb  pyproject.toml  request.ipynb  standalone_admin_password.txt  test.ipynb
.github/workflows/: test.yml
dags/: API_request.py  __init__.py  currencies_to_extract.json  extraction.py  facttable.py
tests/: git_actions_test.py
