[project]
name = "traffic-sydney"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow==2.11.0",
    "dotenv>=0.9.9",
    "ipykernel>=7.0.1",
    "pandas>=2.3.3",
    "pip>=25.2",
    "psycopg2-binary>=2.9.11",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "sqlalchemy>=1.4.54",
]
